--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,1 +1,13 @@
 <h1>Dashboard</h1>
+<div class="row">
+  <div class="small-2 large-4 columns">SECTION</div>
+  <div class="small-4 large-4 columns">SECTION</div>
+  <div class="small-6 large-4 columns">SECTION</div>
+</div>
+<br>
+<div class="row">
+  <div class="small-2 large-4 columns">SECTION</div>
+  <div class="small-4 large-4 columns">SECTION</div>
+  <div class="small-6 large-4 columns">SECTION</div>
+</div>
+
