--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,13 +1,18 @@
-<h1>Dashboard</h1>
-<div class="row">
-  <div class="small-2 large-4 columns">SECTION</div>
-  <div class="small-4 large-4 columns">SECTION</div>
-  <div class="small-6 large-4 columns">SECTION</div>
+<div class="background">  
+  <nav class="top-bar" data-topbar role="navigation" data-options="is_hover: false", data-options="sticky_on: [small, medium, large]">
+    <ul class="title-area">
+      <li class="name">
+        <h1 class="logo"><a href="#">Quickets</a></h1>
+      </li>
+    </ul>
+    <section class="top-bar-section">
+      <ul class="right">
+        <li>Tracked Artists</li>
+        <li>Browse</li>
+        <li class="logout"><%= link_to image_tag("logout.png"), '/logout', :method=>:delete %></li>
+      </ul>
+    </section>
+  </nav>
+    <p id="text_1">Tracking your favorite artists</p>
+    <p id="text_2">so that you don't miss out on the next big show</p>
 </div>
-<br>
-<div class="row">
-  <div class="small-2 large-4 columns">SECTION</div>
-  <div class="small-4 large-4 columns">SECTION</div>
-  <div class="small-6 large-4 columns">SECTION</div>
-</div>
-
