--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,3 +3,14 @@
     <p id="text_1">Tracking your favorite artists</p>
     <p id="text_2">so that you don't miss out on the next big show</p>
 </div>
+<li class="has-form">
+  <div class="row collapse">
+    <div class="large-8 small-9 columns search_bar">
+      <input type="text" placeholder="Search For Artist">
+    </div>
+    <div class="large-4 small-3 columns">
+      <%= link_to image_tag("search.png", class: "search_image") %>
+    </div>
+  </div>
+</li>
+
