can pull in events. had to require uri to parse data before sending in to api. wrote more tests to ensure that a two word city can be passed through correctly.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,8 @@
 <%= render :partial => 'partials/navbar' %>
 <div class="small-block-grid-6 events">
+  <%= @events %>
+</div>
+<!-- <div class="small-block-grid-6 events">
   <li><%= image_tag("default.jpg", class: "info") %></li>
   <li><%= image_tag("default.jpg", class: "info") %></li>
   <li><%= image_tag("default.jpg", class: "info") %></li>
@@ -14,12 +17,4 @@
   <li><%= image_tag("default.jpg", class: "info") %></li>
   <li><%= image_tag("default.jpg", class: "info") %></li>
   <li><%= image_tag("default.jpg", class: "info") %></li>
-</div>
-<div class="small-block-grid-6 events">
-  <li><%= image_tag("default.jpg", class: "info") %></li>
-  <li><%= image_tag("default.jpg", class: "info") %></li>
-  <li><%= image_tag("default.jpg", class: "info") %></li>
-  <li><%= image_tag("default.jpg", class: "info") %></li>
-  <li><%= image_tag("default.jpg", class: "info") %></li>
-  <li><%= image_tag("default.jpg", class: "info") %></li>
-</div>
+</div> -->
