--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,12 @@
 
   <body>
 
+    <% flash.each do |type, message| %>
+    <div class="alert flash <%= type %>">
+      <%= message %>
+    </div>
+    <% end %>
+
     <%= yield %>
 
   </body>
