added angular to sort and filter data. converted artist objects to json for angular. deleted bower.json - don't need. added moment.js to parse date.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -166,13 +166,13 @@ a {
   list-style: none;
 }
 
- .search_bar input[type=text] {
-  margin-top: -200%;
-  margin-top: -51%;
-  margin-left: 67%;
-  width: 57%;
-  border-radius: 35px;
-}
+//  .search_bar input[type=text] {
+//   margin-top: -200%;
+//   margin-top: -51%;
+//   margin-left: 67%;
+//   width: 57%;
+//   border-radius: 35px;
+// }
 
 // li.info {
 //   margin-left: 11px;
