--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body ng-app="Quickets">
 
     <% flash.each do |type, message| %>
     <div class="alert flash <%= type %>">
