--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -148,13 +148,6 @@ a {
   padding: 10px;
 }
 
-// .events .info {
-//   width: 200px;
-//   height: 80px;
-//   padding: 8px;
-//   border: 1px solid;
-// }
-
  .search_image {
   width: 50px;
   height: 50px;
@@ -165,31 +158,6 @@ a {
 .has-form {
   list-style: none;
 }
-
-//  .search_bar input[type=text] {
-//   margin-top: -200%;
-//   margin-top: -51%;
-//   margin-left: 67%;
-//   width: 57%;
-//   border-radius: 35px;
-// }
-
-// li.info {
-//   margin-left: 11px;
-//   text-align: center;
-//   font-family: 'Amatic SC', cursive;
-//   font-size: 1.5em;
-//   margin-bottom: 5px;
-//   line-height: 63px;
-//   margin-top: 5px;
-// }
-
-// li .add-music {
-//   width: 40px;
-//   height: 40px;
-//   margin-top: 25px;
-//   margin-left: 42px;
-// }
 
 .tracked li {
   text-align: center;
@@ -211,3 +179,83 @@ div.flash.error {
   border: 2px solid red; color: red;
   text-align: center;
 }
+
+.button {
+  width: 80px;
+  height: 80px;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #FFFFFF !important;
+}
+
+.search {
+  width: 40px;
+  height: 40px;
+  margin-left: 676px;
+  margin-top: -91px;
+}
+
+.search_bar {
+  margin-left: -130px !important;
+  margin-top: 10px
+}
+
+input[type="text"] {
+  border-radius: 20px !important;
+}
+
+.events {
+  text-align: center !important;
+  font-family: 'Amatic SC', cursive;
+  font-size: 1.75em;
+}
+
+.events li {
+  border: 4px solid black;
+  border-radius: 5px;
+  padding: 10px 5px;
+  background-color:#fff;
+}
+
+.small-block-grid-4 > li {
+
+  width: 24%!important;
+  margin: 0.5%;
+  padding-top:20px!important;
+}
+
+.tracked {
+  text-align: center;
+  color: white;
+  font-size: 1.25em;
+}
+
+.tracked p a {
+  color: white;
+}
+
+.tracked_background {
+  display: table;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: asset-url('keys.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  text-align: center;
+}
+
+.artist_index {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: asset-url('blue_background.png') repeat; 
+  text-align: center;
+}
+
+.artist_data{
+  min-height:190px;
+}
+
